--- a/musical/musical.html
+++ b/musical/musical.html
@@ -271,7 +271,7 @@
                     <p class="subtitle">
                       어린이대공원에서 펼쳐지는 마법같은 시간
                     </p>
-                    <p class="click">자세히보기 -></p>
+                    <p class="click">자세히보기</p>
                   </div>
                   <h3>소중한 나의 몸</h3>
                 </li>
@@ -281,7 +281,7 @@
                     <p class="subtitle">
                       어린이대공원에서 펼쳐지는 마법같은 시간
                     </p>
-                    <p class="click">자세히보기 -></p>
+                    <p class="click">자세히보기</p>
                   </div>
                   <h3>엘리야와 함께하는 안전교육 대작전</h3>
                 </li>
@@ -291,7 +291,7 @@
                     <p class="subtitle">
                       어린이대공원에서 펼쳐지는 마법같은 시간
                     </p>
-                    <p class="click">자세히보기 -></p>
+                    <p class="click">자세히보기</p>
                   </div>
                   <h3>안전하게! 사이좋게!</h3>
                 </li>
@@ -301,7 +301,7 @@
                     <p class="subtitle">
                       어린이대공원에서 펼쳐지는 마법같은 시간
                     </p>
-                    <p class="click">자세히보기 -></p>
+                    <p class="click">자세히보기</p>
                   </div>
                   <h3>초록별 요정의 환경 지키기 대작전</h3>
                 </li>
@@ -311,7 +311,7 @@
                     <p class="subtitle">
                       어린이대공원에서 펼쳐지는 마법같은 시간
                     </p>
-                    <p class="click">자세히보기 -></p>
+                    <p class="click">자세히보기</p>
                   </div>
                   <h3>미세먼지 바이바이</h3>
                 </li>
@@ -346,7 +346,7 @@
                     <p class="subtitle">
                       어린이대공원에서 펼쳐지는 마법같은 시간
                     </p>
-                    <p class="click">자세히보기 -></p>
+                    <p class="click">자세히보기</p>
                   </div>
                   <h3>사랑해요 예쁜말!</h3>
                 </li>
@@ -356,7 +356,7 @@
                     <p class="subtitle">
                       어린이대공원에서 펼쳐지는 마법같은 시간
                     </p>
-                    <p class="click">자세히보기 -></p>
+                    <p class="click">자세히보기</p>
                   </div>
                   <h3>우리는 소중한 친구야</h3>
                 </li>
@@ -366,7 +366,7 @@
                     <p class="subtitle">
                       어린이대공원에서 펼쳐지는 마법같은 시간
                     </p>
-                    <p class="click">자세히보기 -></p>
+                    <p class="click">자세히보기</p>
                   </div>
                   <h3>즐겁게! 사이좋게!</h3>
                 </li>
@@ -376,7 +376,7 @@
                     <p class="subtitle">
                       어린이대공원에서 펼쳐지는 마법같은 시간
                     </p>
-                    <p class="click">자세히보기 -></p>
+                    <p class="click">자세히보기</p>
                   </div>
                   <h3>친구들이 힘을 모아!</h3>
                 </li>
@@ -386,7 +386,7 @@
                     <p class="subtitle">
                       어린이대공원에서 펼쳐지는 마법같은 시간
                     </p>
-                    <p class="click">자세히보기 -></p>
+                    <p class="click">자세히보기</p>
                   </div>
                   <h3>나는 나답게 너는 너답게</h3>
                 </li>
@@ -396,7 +396,7 @@
                     <p class="subtitle">
                       어린이대공원에서 펼쳐지는 마법같은 시간
                     </p>
-                    <p class="click">자세히보기 -></p>
+                    <p class="click">자세히보기</p>
                   </div>
                   <h3>달라?? 달라!!</h3>
                 </li>
@@ -411,7 +411,7 @@
                     <p class="subtitle">
                       어린이대공원에서 펼쳐지는 마법같은 시간
                     </p>
-                    <p class="click">자세히보기 -></p>
+                    <p class="click">자세히보기</p>
                   </div>
                   <h3>도단이와 요술 주머니</h3>
                 </li>
@@ -421,7 +421,7 @@
                     <p class="subtitle">
                       어린이대공원에서 펼쳐지는 마법같은 시간
                     </p>
-                    <p class="click">자세히보기 -></p>
+                    <p class="click">자세히보기</p>
                   </div>
                   <h3>잭과 콩이의 신나는 모험</h3>
                 </li>
@@ -431,7 +431,7 @@
                     <p class="subtitle">
                       어린이대공원에서 펼쳐지는 마법같은 시간
                     </p>
-                    <p class="click">자세히보기 -></p>
+                    <p class="click">자세히보기</p>
                   </div>
                   <h3>꼬마산타 라라의 선물 여행</h3>
                 </li>
@@ -441,7 +441,7 @@
                     <p class="subtitle">
                       어린이대공원에서 펼쳐지는 마법같은 시간
                     </p>
-                    <p class="click">자세히보기 -></p>
+                    <p class="click">자세히보기</p>
                   </div>
                   <h3>안녕! 크리스마스</h3>
                 </li>
@@ -451,7 +451,7 @@
                     <p class="subtitle">
                       어린이대공원에서 펼쳐지는 마법같은 시간
                     </p>
-                    <p class="click">자세히보기 -></p>
+                    <p class="click">자세히보기</p>
                   </div>
                   <h3>뭉치의 샤이닝 스타</h3>
                 </li>
