--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </a>
         <nav class="desktop-nav">
           <a href="index.html" class="nav-link">HOME</a>
-          <a href="about/about.html" class="nav-link">ABOUT US</a>
+          <a href="about/about.html" class="nav-link">ABOUT</a>
           <a href="musical/musical.html" class="nav-link">MUSICAL</a>
           <a href="creative.html" class="nav-link">CREATIVE</a>
           <a href="community.html" class="nav-link">COMMUNITY</a>
@@ -82,7 +82,7 @@
 
     <nav class="mobile-nav">
       <a href="index.html" class="nav-link">HOME</a>
-      <a href="about/about.html" class="nav-link">ABOUT US</a>
+      <a href="about/about.html" class="nav-link">ABOUT</a>
       <a href="work.html" class="nav-link">MUSICAL</a>
       <a href="creative.html" class="nav-link">CREATIVE</a>
       <a href="community.html" class="nav-link">COMMUNITY</a>
