--- a/musical/musical.html
+++ b/musical/musical.html
@@ -58,6 +58,10 @@
     </div>
     <!--visual END-->
 
+    <!--header-->
+
+    <!--headerEnd-->
+
     <!--container-->
     <div id="container">
       <!--con01-->
@@ -143,7 +147,7 @@
                     </p>
                     <p class="click">자세히보기 -></p>
                   </div>
-                  <h3>엘리야와 함께하는 골고루 먹기 대작전</h3>
+                  <h3>골고루 먹기 대작전</h3>
                 </li>
                 <li>
                   <div class="imgWrap">
@@ -471,7 +475,7 @@
               <ul class="cardList">
                 <li class="card">
                   <div class="left">
-                    <h3>엘리야와 함께하는 골고루 먹기 대작전</h3>
+                    <h3>골고루 먹기 대작전</h3>
                     <p>
                       엘리야와 함께하는 골고루 먹기 대작전" 는 2020년부터
                       제이퍼펫에서 최초로 기획한 새로운 장르의 뮤지컬로,
