--- a/about/about.html
+++ b/about/about.html
@@ -264,6 +264,7 @@
         </div>
       </div>
       <div class="floatFix">
+        <img src="characterIMG/png/daram_cute.png" alt="" />
         <p>CONTACT</p>
       </div>
       <div class="inquery">
