--- a/musical/musical.html
+++ b/musical/musical.html
@@ -36,8 +36,55 @@
       referrerpolicy="no-referrer"
     ></script>
     <link rel="stylesheet" href="musicalStyle.css" />
+    <link rel="stylesheet" href="../header/headerStyle.css" />
+    <link rel="stylesheet" href="../sub_visual/sub_visualStyle.css" />
+    <link rel="stylesheet" href="../footer/footerStyle.css" />
   </head>
   <body>
+    <header id="main-header">
+      <div class="nav-container">
+        <!-- <div class="cloud-container">
+          <img class="ps ps1" src="images/sun.png" alt="sun" />
+          <img class="ps ps2" src="images/cloud-1.png" alt="cloud-1" />
+          <img class="ps ps3" src="images/cloud-2.png" alt="cloud-2" />
+        </div> -->
+        <a href="index.html" class="logo">
+          <img src="../images/logo_bk.png" alt="J-PUPPET" />
+        </a>
+        <nav class="desktop-nav">
+          <a href="about.html" class="nav-link">ABOUT</a>
+          <a href="musical.html" class="nav-link">MUSICAL</a>
+          <a href="creative.html" class="nav-link">CREATIVE</a>
+          <a href="community.html" class="nav-link">COMMUNITY</a>
+          <div class="btnWrap">
+            <button class="contactBtn" aria-label="문의하기">
+              <a href="../제이퍼펫.pdf" target="_blank"> 리플렛</a>
+            </button>
+            <p class="contactTxt">어떤 프로젝트를 함께 하시겠어요?</p>
+          </div>
+        </nav>
+        <div
+          class="hamburger-menu"
+          role="button"
+          aria-label="메뉴 열기"
+          tabindex="0"
+        >
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    </header>
+
+    <!-- Mobile Navigation Menu -->
+    <nav class="mobile-nav">
+      <a href="about.html" class="nav-link">ABOUT</a>
+      <a href="musical.html" class="nav-link">MUSICAL</a>
+      <a href="creative.html" class="nav-link">CREATIVE</a>
+      <a href="community.html" class="nav-link">COMMUNITY</a>
+      <a href="contact.html" class="nav-link">CONTACT</a>
+    </nav>
+
     <!--visual-->
     <div id="visual">
       <div class="inner">
@@ -1012,38 +1059,6 @@
     </div>
     <!--container END-->
 
-    <div id="floating">
-      <div class="top">
-        <div class="topInner">
-          <i class="fa-solid fa-arrow-up"></i>
-          <p>TOP</p>
-        </div>
-      </div>
-      <div class="floatFix">
-        <p>CONTACT</p>
-      </div>
-      <div class="inquery">
-        <i class="fa-solid fa-xmark"></i>
-        <h4>온라인으로 간편하게</h4>
-        <p>제이퍼펫에서 꼼꼼하게 확인하여 개별 연락드립니다.</p>
-        <ul>
-          <li>
-            <span>이름</span
-            ><input type="text" placeholder="성함을 입력해주세요" />
-          </li>
-          <li>
-            <span>연락처</span
-            ><input type="text" placeholder="연락처를 입력해주세요" />
-          </li>
-          <li>
-            <span>문의사항</span
-            ><input type="text" placeholder="문의사항을 입력해주세요" />
-          </li>
-        </ul>
-        <button>문의하기</button>
-      </div>
-    </div>
-
     <!--footer-->
     <footer>
       <div class="inner">
@@ -1114,7 +1129,9 @@
       </div>
     </footer>
     <!--footer END-->
-
+    <script src="../header/headerCustom.js"></script>
+    <script src="../sub_visual/sub_visualStyle.css"></script>
     <script src="musicalCustom.js"></script>
+    <script src="../footer/footerCustom.js"></script>
   </body>
 </html>
