--- a/musical/musical.html
+++ b/musical/musical.html
@@ -41,6 +41,7 @@
     <link rel="stylesheet" href="../footer/footerStyle.css" />
   </head>
   <body>
+    <!--header-->
     <header id="main-header">
       <div class="nav-container">
         <!-- <div class="cloud-container">
@@ -84,6 +85,7 @@
       <a href="community.html" class="nav-link">COMMUNITY</a>
       <a href="contact.html" class="nav-link">CONTACT</a>
     </nav>
+    <!--headerEnd-->
 
     <!--visual-->
     <div id="visual">
@@ -104,10 +106,6 @@
       </ul>
     </div>
     <!--visual END-->
-
-    <!--header-->
-
-    <!--headerEnd-->
 
     <!--container-->
     <div id="container">
@@ -603,31 +601,6 @@
                     <img src="img/1-5-1.jpg" />
                   </div>
                 </li>
-                <!-- <li class="card">
-                  <div class="left">
-                    <div class="top">
-                      <h3>엘리야와 함께하는 골고루 먹기 대작전6</h3>
-                      <p>
-                        “앨리와 함께하는 골고루 먹기 대작전”은 2020년부터
-                        제이퍼펫에서 최초로 기획·제작한 창의 뮤지컬입니다.
-                        창의형 뮤지컬, 연극+뮤지컬 캐릭터, 스토리텔링과 화려한
-                        퍼포먼스가 가미된 퍼포먼스형 뮤지컬로 가족 모두가 함께
-                        즐길 수 있는 공연으로, 클래식 및 보컬을 다룬 대형 창작
-                        뮤지컬로 제작하였습니다.
-                      </p>
-                    </div>
-                    <ul>
-                      <li>캐릭터뮤지컬팀 300~1500명</li>
-                      <li>캐릭터뮤지컬팀 300~1500명</li>
-                      <li>캐릭터뮤지컬팀 300~1500명</li>
-                      <li>캐릭터뮤지컬팀 300~1500명</li>
-                      <li>캐릭터뮤지컬팀 300~1500명</li>
-                    </ul>
-                  </div>
-                  <div class="imgWrap">
-                    <img src="img/img_sample01.jpg" />
-                  </div>
-                </li> -->
               </ul>
             </li>
             <!--위생-->
@@ -1130,7 +1103,7 @@
     </footer>
     <!--footer END-->
     <script src="../header/headerCustom.js"></script>
-    <script src="../sub_visual/sub_visualStyle.css"></script>
+    <script src="../sub_visual/sub_visualCustom.js"></script>
     <script src="musicalCustom.js"></script>
     <script src="../footer/footerCustom.js"></script>
   </body>
