--- a/about/about.html
+++ b/about/about.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="about.css" />
-    <link rel="stylesheet" href="sub_visual/sub_visualStyle.css" />
+    <link rel="stylesheet" href="../header/headerStyle.css" />
+    <link rel="stylesheet" href="../sub_visual/sub_visualStyle.css" />
+    <link rel="stylesheet" href="../footer/footerStyle.css" />
 
     <script src="jquery-3.7.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"></script>
@@ -17,7 +19,35 @@
     />
   </head>
   <body>
-    <!-- <div data-include="/sub_visual/sub_visual.html"></div> -->
+    <!-- header -->
+    <header id="main-header">
+      <div class="nav-container">
+        <a href="index.html" class="logo">
+          <img src="../images/logo_bk.png" alt="J-PUPPET" />
+        </a>
+        <nav class="desktop-nav">
+          <a href="about.html" class="nav-link">ABOUT</a>
+          <a href="musical.html" class="nav-link">MUSICAL</a>
+          <a href="creative.html" class="nav-link">CREATIVE</a>
+          <a href="community.html" class="nav-link">COMMUNITY</a>
+          <div class="btnWrap">
+            <button class="contactBtn" aria-label="문의하기">CONTACT</button>
+            <p class="contactTxt">어떤 프로젝트를 함께 하시겠어요?</p>
+          </div>
+        </nav>
+        <div
+          class="hamburger-menu"
+          role="button"
+          aria-label="메뉴 열기"
+          tabindex="0"
+        >
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    </header>
+    <!-- header END-->
 
     <!--visual-->
     <div id="visual">
@@ -76,7 +106,7 @@
             <div class="center small move6"></div>
           </div>
         </div>
-        <img src="characterIMG/png/daram_explore.png" alt="" />
+        <img src="../characterIMG/png/daram_explore.png" alt="" />
         <ul>
           <li class="up">
             <h3>Family</h3>
@@ -167,7 +197,7 @@
             <li><p>인형제작</p></li>
             <li><p>음향작업</p></li>
           </ul>
-          <img src="characterIMG/png/daram_bbakkomRe.png" alt="" />
+          <img src="../characterIMG/png/daram_bbakkomRe.png" alt="" />
         </div>
       </section>
 
@@ -176,8 +206,8 @@
         <ul>
           <li>
             <div class="images">
-              <img src="characterIMG/team/음악감독2.png" alt="" />
-              <img src="characterIMG/team/음악감독_원.png" alt="" />
+              <img src="../characterIMG/team/음악감독2.png" alt="" />
+              <img src="../characterIMG/team/음악감독_원.png" alt="" />
             </div>
             <h4>김윤호 | 대표 / 음악감독</h4>
             <p>
@@ -187,8 +217,8 @@
           </li>
           <li>
             <div class="images">
-              <img src="characterIMG/team/연출2.png" alt="" />
-              <img src="characterIMG/team/연출_원.png" alt="" />
+              <img src="../characterIMG/team/연출2.png" alt="" />
+              <img src="../characterIMG/team/연출_원.png" alt="" />
             </div>
             <h4>김재민 | 연출</h4>
             <p>
@@ -198,8 +228,8 @@
           </li>
           <li>
             <div class="images">
-              <img src="characterIMG/team/예술감독2.png" alt="" />
-              <img src="characterIMG/team/예술감독_원.png" alt="" />
+              <img src="../characterIMG/team/예술감독2.png" alt="" />
+              <img src="../characterIMG/team/예술감독_원.png" alt="" />
             </div>
             <h4>율비 | 예술감독</h4>
             <p>
@@ -209,24 +239,24 @@
           </li>
           <li>
             <div class="images">
-              <img src="characterIMG/team/공연팀장2.png" alt="" />
-              <img src="characterIMG/team/공연팀장_원.png" alt="" />
+              <img src="../characterIMG/team/공연팀장2.png" alt="" />
+              <img src="../characterIMG/team/공연팀장_원.png" alt="" />
             </div>
             <h4>이승원 | 공연팀장</h4>
             <p>공연 현장을 총괄·지휘합니다.</p>
           </li>
           <li>
             <div class="images">
-              <img src="characterIMG/team/안무감독2.png" alt="" />
-              <img src="characterIMG/team/안무감독_원.png" alt="" />
+              <img src="../characterIMG/team/안무감독2.png" alt="" />
+              <img src="../characterIMG/team/안무감독_원.png" alt="" />
             </div>
             <h4>탄탄 | 안무감독</h4>
             <p>움직임과 표현을 통해 무대에 에너지를 만듭니다.</p>
           </li>
           <li>
             <div class="images">
-              <img src="characterIMG/team/실장2.png" alt="" />
-              <img src="characterIMG/team/실장_원.png" alt="" />
+              <img src="../characterIMG/team/실장2.png" alt="" />
+              <img src="../characterIMG/team/실장_원.png" alt="" />
             </div>
             <h4>김영일 | 실장</h4>
             <p>
@@ -236,8 +266,8 @@
           </li>
           <li>
             <div class="images">
-              <img src="characterIMG/team/비서2.png" alt="" />
-              <img src="characterIMG/team/비서_원.png" alt="" />
+              <img src="../characterIMG/team/비서2.png" alt="" />
+              <img src="../characterIMG/team/비서_원.png" alt="" />
             </div>
             <h4>육희정 | 비서</h4>
             <p>
@@ -256,6 +286,7 @@
       </section>
     </div>
 
+    <!-- floating -->
     <div id="floating">
       <div class="top">
         <div class="topInner">
@@ -264,7 +295,7 @@
         </div>
       </div>
       <div class="floatFix">
-        <img src="characterIMG/png/daram_cute.png" alt="" />
+        <img src="../characterIMG/png/daram_cute.png" alt="" />
         <p>CONTACT</p>
       </div>
       <div class="inquery">
@@ -288,8 +319,82 @@
         <button>문의하기</button>
       </div>
     </div>
+    <!-- floating END-->
 
-    <script src="sub_visual/sub_visualCustom.js"></script>
+    <!--footer-->
+    <footer>
+      <div class="inner">
+        <div class="top">
+          <a class="logo" href="index.html">
+            <img src="../footer/logo/logo_wh.png" />
+          </a>
+          <ul class="menu">
+            <li>
+              <a href="#">ABOUT US</a>
+            </li>
+            <li>
+              <a href="#">MUSICAL</a>
+            </li>
+            <li>
+              <a href="#">CREATIVE</a>
+            </li>
+            <li>
+              <a href="#">COMMUNITY</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="bottom">
+          <ul class="link">
+            <li class="snsIcon">
+              <a href="https://blog.naver.com/jpuppetmusical"
+                ><i class="fa-solid fa-blog"></i
+              ></a>
+            </li>
+            <li class="snsIcon">
+              <a href="https://www.youtube.com/@jpuppetmusical"
+                ><i class="fa-brands fa-youtube"></i
+              ></a>
+            </li>
+            <li class="snsIcon">
+              <a href="https.instagram.com/jpuppetmusical1/#"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+            </li>
+          </ul>
+
+          <div class="info">
+            <span>서울시 구로구 구일로10길 27</span>
+            |
+            <span>Tel 02-6735-0820</span> |
+            <span>Email jpuppetmusical@naver.com</span> |
+            <span>대표자: 김윤호</span> |
+            <span>COPYRIGHT 2018 제이퍼펫 All rights reserved.</span>
+          </div>
+        </div>
+
+        <div class="flowerImgWrap flower01">
+          <img src="../footer/flowers/flower01.png" />
+        </div>
+        <div class="flowerImgWrap flower02">
+          <img src="../footer/flowers/flower02.png" />
+        </div>
+        <div class="flowerImgWrap flower03">
+          <img src="../footer/flowers/flower03.png" />
+        </div>
+        <div class="flowerImgWrap flower04">
+          <img src="../footer/flowers/flower04.png" />
+        </div>
+        <div class="flowerImgWrap flower05">
+          <img src="../footer/flowers/flower04.png" />
+        </div>
+      </div>
+    </footer>
+    <!--footer END-->
+
+    <script src="../header/headerCustom.js"></script>
+    <script src="../sub_visual/sub_visualCustom.js"></script>
     <script src="about.js"></script>
+    <script src="../footer/footerCustom.js"></script>
   </body>
 </html>
