--- a/musical/musical.html
+++ b/musical/musical.html
@@ -58,10 +58,12 @@
           <a href="creative.html" class="nav-link">CREATIVE</a>
           <a href="community.html" class="nav-link">COMMUNITY</a>
           <div class="btnWrap">
-            <button class="contactBtn" aria-label="문의하기">
-              <a href="../제이퍼펫.pdf" target="_blank"> 리플렛</a>
-            </button>
-            <p class="contactTxt">어떤 프로젝트를 함께 하시겠어요?</p>
+            <button class="contactBtn" aria-label="문의하기">리플렛</button>
+            <p class="contactTxt">
+              <a href="../제이퍼펫.pdf" target="_blank"
+                >어떤 프로젝트를 함께 하시겠어요?</a
+              >
+            </p>
           </div>
         </nav>
         <div
