--- a/about/about.html
+++ b/about/about.html
@@ -164,7 +164,7 @@
               </p>
             </li>
             <li>
-              <h3>무대제작<br /><span>Stage Design & Production</span></h3>
+              <h3>무대제작<br /><span>Stage Production</span></h3>
               <p>
                 공연의 콘셉트와 연출 의도에 맞춘 세밀한 무대 디자인으로 몰입감
                 있는 현장을 구현합니다. 세트, 조명, 소품 등 모든 요소를
@@ -316,7 +316,7 @@
             ><input type="text" placeholder="문의사항을 입력해주세요" />
           </li>
         </ul>
-        <button>문의하기</button>
+        <button class="send">문의하기</button>
       </div>
     </div>
     <!-- floating END-->
