--- a/floating/sub_floating.html
+++ b/floating/sub_floating.html
@@ -23,7 +23,7 @@
         </div>
       </div>
       <div class="floatFix">
-        <img src="characterIMG/png/daram_cute.png" alt="" />
+        <img src="../characterIMG/png/daram_cute.png" alt="" />
         <p>CONTACT</p>
       </div>
       <div class="inquery">
@@ -44,7 +44,7 @@
             ><input type="text" placeholder="문의사항을 입력해주세요" />
           </li>
         </ul>
-        <button>문의하기</button>
+        <button class="send">문의하기</button>
       </div>
     </div>
 
