--- a/musical/musical.html
+++ b/musical/musical.html
@@ -39,6 +39,7 @@
     <link rel="stylesheet" href="../header/headerStyle.css" />
     <link rel="stylesheet" href="../sub_visual/sub_visualStyle.css" />
     <link rel="stylesheet" href="../footer/footerStyle.css" />
+    <link rel="stylesheet" href="../floating/sub_floatingStyle.css" />
   </head>
   <body>
     <!--header-->
@@ -49,14 +50,14 @@
           <img class="ps ps2" src="images/cloud-1.png" alt="cloud-1" />
           <img class="ps ps3" src="images/cloud-2.png" alt="cloud-2" />
         </div> -->
-        <a href="index.html" class="logo">
+        <a href="../index.html" class="logo">
           <img src="../images/logo_bk.png" alt="J-PUPPET" />
         </a>
         <nav class="desktop-nav">
-          <a href="about.html" class="nav-link">ABOUT</a>
+          <a href="../about/about.html" class="nav-link">ABOUT</a>
           <a href="musical.html" class="nav-link">MUSICAL</a>
-          <a href="creative.html" class="nav-link">CREATIVE</a>
-          <a href="community.html" class="nav-link">COMMUNITY</a>
+          <a href="../creative/creative.html" class="nav-link">CREATIVE</a>
+          <a href="../community/community.html" class="nav-link">COMMUNITY</a>
           <div class="btnWrap">
             <button class="contactBtn" aria-label="문의하기">리플렛</button>
             <p class="contactTxt">
@@ -81,10 +82,10 @@
 
     <!-- Mobile Navigation Menu -->
     <nav class="mobile-nav">
-      <a href="about.html" class="nav-link">ABOUT</a>
+      <a href="../about/about.html" class="nav-link">ABOUT</a>
       <a href="musical.html" class="nav-link">MUSICAL</a>
-      <a href="creative.html" class="nav-link">CREATIVE</a>
-      <a href="community.html" class="nav-link">COMMUNITY</a>
+      <a href="../creative/creative.html" class="nav-link">CREATIVE</a>
+      <a href="../community/community.html" class="nav-link">COMMUNITY</a>
       <a href="contact.html" class="nav-link">CONTACT</a>
     </nav>
     <!--headerEnd-->
@@ -1033,6 +1034,40 @@
       <!--con03 END-->
     </div>
     <!--container END-->
+    <!--floating-->
+    <div id="floating">
+      <div class="top">
+        <div class="topInner">
+          <i class="fa-solid fa-arrow-up"></i>
+          <p>TOP</p>
+        </div>
+      </div>
+      <div class="floatFix">
+        <img src="../characterIMG/png/daram_cute.png" alt="" />
+        <p>CONTACT</p>
+      </div>
+      <div class="inquery">
+        <i class="fa-solid fa-xmark"></i>
+        <h4>온라인으로 간편하게</h4>
+        <p>제이퍼펫에서 꼼꼼하게 확인하여 개별 연락드립니다.</p>
+        <ul>
+          <li>
+            <span>이름</span
+            ><input type="text" placeholder="성함을 입력해주세요" />
+          </li>
+          <li>
+            <span>연락처</span
+            ><input type="text" placeholder="연락처를 입력해주세요" />
+          </li>
+          <li>
+            <span>문의사항</span
+            ><input type="text" placeholder="문의사항을 입력해주세요" />
+          </li>
+        </ul>
+        <button class="send">문의하기</button>
+      </div>
+    </div>
+    <!--floating End-->
 
     <!--footer-->
     <footer>
@@ -1043,16 +1078,16 @@
           </a>
           <ul class="menu">
             <li>
-              <a href="#">ABOUT US</a>
+              <a href="../about/about.html">ABOUT US</a>
             </li>
             <li>
-              <a href="#">MUSICAL</a>
+              <a href="musical.html">MUSICAL</a>
             </li>
             <li>
-              <a href="#">CREATIVE</a>
+              <a href="../creative/creative.html">CREATIVE</a>
             </li>
             <li>
-              <a href="#">COMMUNITY</a>
+              <a href="../community/community.html">COMMUNITY</a>
             </li>
           </ul>
         </div>
@@ -1108,5 +1143,6 @@
     <script src="../sub_visual/sub_visualCustom.js"></script>
     <script src="musicalCustom.js"></script>
     <script src="../footer/footerCustom.js"></script>
+    <script src="../floating/sub_floatingCustom.js"></script>
   </body>
 </html>
