--- a/about/about.html
+++ b/about/about.html
@@ -22,14 +22,14 @@
     <!-- header -->
     <header id="main-header">
       <div class="nav-container">
-        <a href="index.html" class="logo">
+        <a href="../index.html" class="logo">
           <img src="../images/logo_bk.png" alt="J-PUPPET" />
         </a>
         <nav class="desktop-nav">
-          <a href="about.html" class="nav-link">ABOUT</a>
-          <a href="musical.html" class="nav-link">MUSICAL</a>
-          <a href="creative.html" class="nav-link">CREATIVE</a>
-          <a href="community.html" class="nav-link">COMMUNITY</a>
+          <a href="../about/about.html" class="nav-link">ABOUT</a>
+          <a href="../musical/musical.html" class="nav-link">MUSICAL</a>
+          <a href="../creative/creative.html" class="nav-link">CREATIVE</a>
+          <a href="../community/community.html" class="nav-link">COMMUNITY</a>
           <div class="btnWrap">
             <button class="contactBtn" aria-label="문의하기">CONTACT</button>
             <p class="contactTxt">어떤 프로젝트를 함께 하시겠어요?</p>
@@ -325,21 +325,21 @@
     <footer>
       <div class="inner">
         <div class="top">
-          <a class="logo" href="index.html">
+          <a class="logo" href="../index.html">
             <img src="../footer/logo/logo_wh.png" />
           </a>
           <ul class="menu">
             <li>
-              <a href="#">ABOUT US</a>
+              <a href="../about/about.html">ABOUT</a>
             </li>
             <li>
-              <a href="#">MUSICAL</a>
+              <a href="../musical/musical.html">MUSICAL</a>
             </li>
             <li>
-              <a href="#">CREATIVE</a>
+              <a href="../creative/creative.html">CREATIVE</a>
             </li>
             <li>
-              <a href="#">COMMUNITY</a>
+              <a href="../community/community.html">COMMUNITY</a>
             </li>
           </ul>
         </div>
