--- a/musical/musical.html
+++ b/musical/musical.html
@@ -94,7 +94,9 @@
     <div id="visual">
       <div class="inner">
         <div class="keyword01 keyword">MUSICAL</div>
-        <div class="circle"><h2>이야기로 사람의 마음을 움직이다</h2></div>
+        <div class="circle">
+          <h2>어른도, 아이도 빠져드는 움직이는 이야기의 마법</h2>
+        </div>
         <div class="keyword02 keyword">JPUPPET</div>
       </div>
       <ul>
