--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <a href="about/about.html" class="nav-link">ABOUT US</a>
           <a href="musical/musical.html" class="nav-link">MUSICAL</a>
           <a href="creative.html" class="nav-link">CREATIVE</a>
-          <a href="community.html" class="nav-link">COMMUNITY</a>
+          <a href="community/community.html" class="nav-link">COMMUNITY</a>
           <div class="btnWrap">
             <!-- 수정: aria-label 추가 -->
             <button class="contactBtn" aria-label="문의하기">CONTACT</button>
@@ -153,7 +153,7 @@
       <a href="about/about.html" class="nav-link">ABOUT US</a>
       <a href="work.html" class="nav-link">MUSICAL</a>
       <a href="creative.html" class="nav-link">CREATIVE</a>
-      <a href="community.html" class="nav-link">COMMUNITY</a>
+      <a href="community/community.html" class="nav-link">COMMUNITY</a>
     </nav>
 
     <section class="our-design-section">
@@ -434,7 +434,7 @@
               <a href="#">CREATIVE</a>
             </li>
             <li>
-              <a href="#">COMMUNITY</a>
+              <a href="community/community.html">COMMUNITY</a>
             </li>
           </ul>
         </div>
