--- a/about/about.html
+++ b/about/about.html
@@ -31,8 +31,12 @@
           <a href="../creative/creative.html" class="nav-link">CREATIVE</a>
           <a href="../community/community.html" class="nav-link">COMMUNITY</a>
           <div class="btnWrap">
-            <button class="contactBtn" aria-label="문의하기">CONTACT</button>
-            <p class="contactTxt">어떤 프로젝트를 함께 하시겠어요?</p>
+            <button class="contactBtn" aria-label="문의하기">리플렛</button>
+            <p class="contactTxt">
+              <a href="../제이퍼펫.pdf" target="_blank"
+                >어떤 프로젝트를 함께 하시겠어요?</a
+              >
+            </p>
           </div>
         </nav>
         <div
