--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     ></script>
     <!--===================G=S=A=P====================-->
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="footer/footerStyle.css" />
+    <link rel="stylesheet" href="floating/sub_floatingStyle.css" />
   </head>
   <body>
     <!-- 수정: id를 "intro"로 통일 -->
@@ -72,7 +74,7 @@
       </div>
     </section>
 
-    <div id="visual">
+    <!-- <div id="visual">
       <div class="inner">
         <div class="keyword01 keyword">WELCOME</div>
         <div class="circle"><h2>이야기로 사람의 마음을 움직이다</h2></div>
@@ -88,7 +90,7 @@
         <li></li>
         <li></li>
       </ul>
-    </div>
+    </div> -->
 
     <section class="hero-section">
       <div class="stars-container">
@@ -123,15 +125,17 @@
           <img src="images/logo_bk.png" alt="J-PUPPET" />
         </a>
         <nav class="desktop-nav">
-          <a href="index.html" class="nav-link">HOME</a>
-          <a href="about/about.html" class="nav-link">ABOUT US</a>
+          <a href="about/about.html" class="nav-link">ABOUT</a>
           <a href="musical/musical.html" class="nav-link">MUSICAL</a>
-          <a href="creative.html" class="nav-link">CREATIVE</a>
+          <a href="creative/creative.html" class="nav-link">CREATIVE</a>
           <a href="community/community.html" class="nav-link">COMMUNITY</a>
           <div class="btnWrap">
-            <!-- 수정: aria-label 추가 -->
-            <button class="contactBtn" aria-label="문의하기">CONTACT</button>
-            <p class="contactTxt">어떤 프로젝트를 함께 하시겠어요?</p>
+            <button class="contactBtn" aria-label="문의하기">리플렛</button>
+            <p class="contactTxt">
+              <a href="./제이퍼펫.pdf" target="_blank"
+                >어떤 프로젝트를 함께 하시겠어요?</a
+              >
+            </p>
           </div>
         </nav>
         <!-- 수정: aria-label 추가 -->
@@ -149,11 +153,10 @@
     </header>
 
     <nav class="mobile-nav">
-      <a href="index.html" class="nav-link">HOME</a>
-      <a href="about/about.html" class="nav-link">ABOUT US</a>
-      <a href="work.html" class="nav-link">MUSICAL</a>
-      <a href="creative.html" class="nav-link">CREATIVE</a>
-      <a href="community/community.html" class="nav-link">COMMUNITY</a>
+      <a href="about/about.html" class="nav-link">ABOUT</a>
+      <a href="musical/musical.html" class="nav-link">MUSICAL</a>
+      <a href="creative/creative.html" class="nav-link">CREATIVE</a>
+      <a href="creative/creative.html" class="nav-link">COMMUNITY</a>
     </nav>
 
     <section class="our-design-section">
@@ -229,14 +232,13 @@
 
     <section class="creative-service-section">
       <!-- 수정: HTML 구조 수정 -->
-      <div class="service-header-title">
-        <p>왜 제이퍼핏이어야 할까요?</p>
-      </div>
+
       <header class="service-header">
         <div class="story-header">
           <h2 class="section-title">Creative Service</h2>
         </div>
-        <a href="#" class="service-badge">자세히보기</a>
+        <p>왜 제이퍼핏이어야 할까요?</p>
+        <a href="./제이퍼펫.pdf" class="service-badge">자세히보기</a>
       </header>
 
       <div class="service-content">
@@ -315,12 +317,7 @@
     </section>
 
     <section class="online-theater-section">
-      <h2 class="section-title">
-        <img
-          src="images/jpuppet-textlogo-s.png"
-          alt="jpuppet-textlogo-s"
-        />ONLINE THEATER
-      </h2>
+      <h2 class="section-title">ONLINE THEATER</h2>
 
       <div id="carousel-wrapper">
         <div id="carousel-container">
@@ -416,7 +413,7 @@
       </div>
     </section>
 
-    <!--footer-->
+    <!--
     <footer>
       <div class="inner">
         <div class="top">
@@ -428,13 +425,13 @@
               <a href="#">ABOUT US</a>
             </li>
             <li>
-              <a href="musical/musical.html">MUSICAL</a>
+              <a href="#">MUSICAL</a>
             </li>
             <li>
               <a href="#">CREATIVE</a>
             </li>
             <li>
-              <a href="community/community.html">COMMUNITY</a>
+              <a href="#">COMMUNITY</a>
             </li>
           </ul>
         </div>
@@ -485,19 +482,46 @@
         </div>
       </div>
     </footer>
+    -->
+    <div data-include="footer/footer.html"></div>
 
-    <!-- 수정: aria-label 추가 -->
-    <a
-      href="index.html"
-      class="to-top-button"
-      aria-label="페이지 상단으로 이동"
-    >
-      <img src="images/main-logo.png" alt="Top으로 이동" />
-    </a>
+    <div id="floating">
+      <div class="top">
+        <a href="index.html" class="topInner">
+          <i class="fa-solid fa-arrow-up"></i>
+          <p>TOP</p>
+        </a>
+      </div>
+      <div class="floatFix">
+        <img src="characterIMG/png/daram_cute.png" alt="" />
+        <p>CONTACT</p>
+      </div>
+      <div class="inquery">
+        <i class="fa-solid fa-xmark"></i>
+        <h4>온라인으로 간편하게</h4>
+        <p>제이퍼펫에서 꼼꼼하게 확인하여 개별 연락드립니다.</p>
+        <ul>
+          <li>
+            <span>이름</span
+            ><input type="text" placeholder="성함을 입력해주세요" />
+          </li>
+          <li>
+            <span>연락처</span
+            ><input type="text" placeholder="연락처를 입력해주세요" />
+          </li>
+          <li>
+            <span>문의사항</span
+            ><input type="text" placeholder="문의사항을 입력해주세요" />
+          </li>
+        </ul>
+        <button class="send">문의하기</button>
+      </div>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollToPlugin.min.js"></script>
-
+    <script src="floating/sub_floatingCustom.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/include.js"></script>
   </body>
 </html>
