--- a/about/about.html
+++ b/about/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>JPUPPET ABOUT</title>
     <link rel="stylesheet" href="about.css" />
     <link rel="stylesheet" href="../header/headerStyle.css" />
     <link rel="stylesheet" href="../sub_visual/sub_visualStyle.css" />
@@ -51,6 +51,15 @@
         </div>
       </div>
     </header>
+
+    <!-- Mobile Navigation Menu -->
+    <nav class="mobile-nav">
+      <a href="about.html" class="nav-link">ABOUT</a>
+      <a href="../musical/musical.html" class="nav-link">MUSICAL</a>
+      <a href="../creative/creative.html" class="nav-link">CREATIVE</a>
+      <a href="../community/community.html" class="nav-link">COMMUNITY</a>
+    </nav>
+
     <!-- header END-->
 
     <!--visual-->
