--- a/musical/musical.html
+++ b/musical/musical.html
@@ -86,7 +86,6 @@
       <a href="musical.html" class="nav-link">MUSICAL</a>
       <a href="../creative/creative.html" class="nav-link">CREATIVE</a>
       <a href="../community/community.html" class="nav-link">COMMUNITY</a>
-      <a href="contact.html" class="nav-link">CONTACT</a>
     </nav>
     <!--headerEnd-->
 
@@ -95,7 +94,7 @@
       <div class="inner">
         <div class="keyword01 keyword">MUSICAL</div>
         <div class="circle">
-          <h2>어른도, 아이도 빠져드는 움직이는 이야기의 마법</h2>
+          <h2>모두가 빠져드는 움직이는 이야기의 마법</h2>
         </div>
         <div class="keyword02 keyword">JPUPPET</div>
       </div>
