--- a/community/community.html
+++ b/community/community.html
@@ -82,7 +82,7 @@
     <div id="visual">
       <div class="inner">
         <div class="keyword01 keyword">MUSICAL</div>
-        <div class="circle"><h2>이야기로 사람의 마음을 움직이다</h2></div>
+        <div class="circle"><h2>무대 밖에서도 이어지는 우리의 이야기</h2></div>
         <div class="keyword02 keyword">JPUPPET</div>
       </div>
       <ul>
@@ -167,6 +167,7 @@
 
         <!-- 공지사항 영역 -->
         <div class="notice_wrap">
+          <h2>공지사항 <span>Notice</span></h2>
           <i class="fa-solid fa-arrow-left notice-prev"></i>
           <div class="notice_set">
             <ul>
@@ -276,10 +277,8 @@
               </li>
             </ul>
           </div>
+          <i class="fa-solid fa-arrow-right notice-next"></i>
         </div>
-        <i class="fa-solid fa-arrow-right notice-next"></i>
-
-        <i class="fa-solid fa-arrow-right notice-next"></i>
       </div>
     </div>
 
