--- a/community/community.html
+++ b/community/community.html
@@ -81,9 +81,9 @@
     <!--visual-->
     <div id="visual">
       <div class="inner">
-        <div class="keyword01 keyword">MUSICAL</div>
-        <div class="circle"><h2>무대 밖에서도 이어지는 우리의 이야기</h2></div>
-        <div class="keyword02 keyword">JPUPPET</div>
+        <div class="keyword01 keyword">COMMUNITY</div>
+        <div class="circle"><h2>소통으로 이어지는 또 하나의 무대</h2></div>
+        <div class="keyword02 keyword">커뮤니티</div>
       </div>
       <ul>
         <li></li>
