--- a/community/community.html
+++ b/community/community.html
@@ -268,7 +268,7 @@
                     rel="noopener"
                   >
                     <img
-                      src="http://jpuppet.com/?mb_ext=file&path=2018%2F12%2F24%2FF40_%EC%96%B4%EB%A6%B0%EC%9D%B4%EB%8C%80%EA%B3%B5%EC%9B%90%20%EA%B3%B5%EC%97%B0%20%ED%8F%AC%EC%8A%A4%ED%84%B0.jpeg"
+                      src="../assets/images/F40_어린이대공원 공연 포스터.jpeg"
                       alt=""
                     />
                   </a>
